--- a/.htaccess
+++ b/.htaccess
@@ -2,7 +2,7 @@
 <IfModule mod_headers.c>
     # Content-Security-Policy: restrict script/style/font/image sources to reduce XSS and injection risk
     # Allows: same-origin, cdn.jsdelivr.net (Bootstrap, Icons, SweetAlert2), jQuery, Google Fonts
-    Header set Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline' https://cdn.jsdelivr.net https://code.jquery.com; style-src 'self' 'unsafe-inline' https://cdn.jsdelivr.net https://fonts.googleapis.com; font-src 'self' https://cdn.jsdelivr.net https://fonts.gstatic.com; img-src 'self' data: blob:; connect-src 'self'; frame-ancestors 'self'; base-uri 'self'; form-action 'self'; object-src 'none'"
+    Header set Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline' https://cdn.jsdelivr.net https://code.jquery.com; style-src 'self' 'unsafe-inline' https://cdn.jsdelivr.net https://fonts.googleapis.com; font-src 'self' https://cdn.jsdelivr.net https://fonts.gstatic.com; img-src 'self' data: blob:; connect-src 'self'; frame-src 'self'; frame-ancestors 'self'; worker-src 'self'; media-src 'self'; manifest-src 'self'; base-uri 'self'; form-action 'self'; object-src 'none'"
 
     # Prevent MIME-type sniffing
     Header set X-Content-Type-Options "nosniff"
